# Credit-Cards-Spendings-Analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.devcontainer/openvpn-configs/: auth.txt
openvpn-configs/: auth.txt  tw-tai.prod.surfshark.comsurfshark_openvpn_udp.ovpn
src/: app.py  main.py
src/libs/gemini/: main.py
src/libs/prompts/: main.py
src/libs/states/: main.py
src/libs/tools/: main.py  pdf_2_image.py  state_2_csv.py  statement_reader.py
